# ros2-line-follower

./: README.md
embedded/APP/: main.c  main.h
embedded/HAL/DC_MOTOR/: DC_MOTOR_config.h  DC_MOTOR_interface.h  DC_MOTOR_prog.c
embedded/HAL/Encoder/: Encoder_config.h  Encoder_interface.h  Encoder_prog.c  Encoder_reg.h
embedded/LIB/: BIT_MATH.h  INTEERUPT_NUM.h  STD_TYPE.h
embedded/MCAL/ADC/: ADC_interface.h  ADC_prog.c  ADC_reg.h
embedded/MCAL/DIO/: DIO_interface.h  DIO_prog.c  DIO_reg.h
embedded/MCAL/EXTI/: EXTI_interface.h  EXTI_prog.c  EXTI_reg.h
embedded/MCAL/GI/: GI_interface.h  GI_prog.c  GI_reg.h
embedded/MCAL/TIM0/: TIM0_config.h  TIM0_interface.h  TIM0_prog.c  TIM0_reg.h
embedded/MCAL/TIM1/: TIM1_config.h  TIM1_interface.h  TIM1_prog.c  TIM1_reg.h
embedded/MCAL/TIM2/: TIM2_config.h  TIM2_interface.h  TIM2_prog.c  TIM2_reg.h
embedded/MCAL/UART/: UART_interface.h  UART_prog.c  UART_reg.h
ros_ws/install/: local_setup.sh  setup.sh
ros_ws/install/line_follower/lib/line_follower/: encoder_odemetry_node  encoder_odom_node  encoder_odometry_node  line_controller_node  line_sensor_node  motor_driver_node  sensor_node  serial_comm
ros_ws/install/line_follower/share/line_follower/: package.dsv  package.ps1  package.sh  package.xml
ros_ws/install/line_follower/share/line_follower/launch/: gazebo.launch.py  line_follow.launch.py
ros_ws/install/line_follower/share/line_follower/urdf/: robot.urdf
ros_ws/install/line_follower/share/line_follower/worlds/: empty.world  line_world.world
ros_ws/log/: latest_build  latest_list
ros_ws/src/line_follower/: package.xml  setup.py
ros_ws/src/line_follower/install/: local_setup.sh  setup.sh
ros_ws/src/line_follower/install/line_follower/share/line_follower/: package.sh  package.xml
ros_ws/src/line_follower/launch/: gazebo.launch.py  line_follow.launch.py
ros_ws/src/line_follower/line_follower/: encoder_odometry_node.py  line_controller_node.py  line_sensor_node.py  motor_driver_node.py
ros_ws/src/line_follower/log/: latest_build
ros_ws/src/line_follower/urdf/: robot.urdf
ros_ws/src/line_follower/worlds/: line_world.world
