<?xml version="1.0"?>

<package format="3">

  <name>line_follower</name>

  <version>0.0.0</version>

  <description>ROS2 Line Follower Robot</description>

  <maintainer email="youssefmohamed4004306@gmail.com">
    Youssef
  </maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>

  <depend>std_msgs</depend>

  <depend>geometry_msgs</depend>

  <depend>nav_msgs</depend>

  <depend>cv_bridge</depend>
  
  <depend>sensor_msgs</depend>

  <depend>tf2_ros</depend>
  
  <depend>cv_bridge</depend>
 
  <depend>robot_state_publisher</depend>

  <depend>gazebo_ros</depend>

  <depend>xacro</depend>

  <exec_depend>joint_state_publisher</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
